# ea-automatic

./: .gitignore  .prettierignore  CLAUDE.md  DESIGN-SYSTEM.md  DIARIO.md  TASKS.md  clientes-carga-1b.csv  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prototipo-claro.html  prototipo-escuro.html  tsconfig.base.json
.claude/: README.md  settings.json
.claude/agents/: arquiteto.md  backend.md  coordenador.md  devops.md  frontend.md  ia.md  seguranca.md  tester.md
.claude/state/: README.md
.github/workflows/: ci.yml
apps/ai-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/ai-service/app/: __init__.py  auth.py  config.py  drive.py  gemini.py  kit_dict.py  kit_job.py  kit_motor.py  kit_pdf.py  main.py  pdf_seguranca.py  schemas.py  staging.py  vertex_erros.py  vt_pdf.py
apps/ai-service/app/routers/: auditoria.py  drive.py  kit.py  vt.py
apps/ai-service/tests/: conftest.py  test_auditoria.py  test_drive.py  test_drive_dedup.py  test_health.py  test_kit.py  test_kit_extrair.py  test_kit_motor.py  test_pdf_seguranca.py  test_vertex_erros.py
apps/backend/: .env.example  drizzle.config.ts  package.json  tsconfig.json  (+1 more)
docs/: INVESTIGACAO-NIVEL-VAGA-PANDAPE.md  INVESTIGACAO-REQUESTSTATUS-FILTROS-PANDAPE-V2.md  INVESTIGACAO-VAGA-REQUISICAO-PANDAPE.md  PLANO-SPIKE-VIABILIDADE-PANDAPE-V2.md  PROPOSTA-MODELAGEM-CLIENTE-EMPRESA-SOULAN.md  RELATORIO-INVESTIGACAO-API-PANDAPE-V2-V3.md  RELATORIO-INVESTIGACAO-API-PANDAPE.md
infra/: .env.example  README.md  docker-compose.yml  install-clicksign-cron.sh  install-pandape-cron.sh
scripts/: deploy-local.sh  gate-deploy.sh
(+417 files in other folders)
